# motion_planning

./: .gitmodules  .travis.sh  .travis.yml  README.md  debian.rosinstall  travis.rosinstall
aerial_manipulation/aerial_transportation/: .gitignore  CMakeLists.txt  README.txt  aerial_transportation_plugins.xml  grasp_form_search_algorithm_plugins.xml  grasp_planning_plugins.xml  package.xml
aerial_manipulation/aerial_transportation/config/: eletromagnet.yaml  grasp_control.yaml  grasp_form_search.yaml  grasp_planning.yaml  hydrus.yaml
aerial_manipulation/aerial_transportation/launch/: aerial_transportation.launch  grasp_control_debug.launch  grasp_form_search.launch  grasp_form_search_result_plot.launch  grasp_planning.launch  grasp_planning_result_plot.launch  mocap_assistant.launch  object.launch  test_object.launch
aerial_manipulation/aerial_transportation/log/: full_searching_convex.txt  full_searching_cylinder.txt  grasp_planning_convex_full_search_result.txt  grasp_planning_convex_result.txt  grasp_planning_cylinder_full_search_result.txt  grasp_planning_cylinder_fulll_search_result.txt  grasp_planning_cylinder_result.txt  searching_result_convex.txt  searching_result_cylinder.txt
aerial_manipulation/aerial_transportation/scripts/: convex_polygonal_column.py  cylinder.py  grasp_form_search_object.py  grasp_full_search_plot.py  grasp_planning_result_plot.py
aerial_manipulation/aerial_transportation/src/: aerial_transportation_node.cpp  base.cpp  grasp_planning_node.cpp  object_visualization.cpp
aerial_manipulation/aerial_transportation/srv/: ObjectConfigure.srv
aerial_manipulation/object_transportation/: CMakeLists.txt  grasp_plugins.xml  package.xml
aerial_manipulation/object_transportation/launch/: mocap_assistant.launch  object_transportation.launch
aerial_manipulation/object_transportation/src/: eletromagnet_test.cpp  grasp_plugin.cpp  object_transportation.cpp  object_transportation_node.cpp
aerial_manipulation/vectoring_thrust_grasp/: .gitignore  CMakeLists.txt  README.md  gazebo_plugin.rosinstall  package.xml
aerial_manipulation/vectoring_thrust_grasp/config/: model_template.sdf
aerial_manipulation/vectoring_thrust_grasp/launch/: dragon_bringup.launch  grasping_motion.launch  test.launch
aerial_manipulation/vectoring_thrust_grasp/osqp/: osqp_path.cmake
aerial_manipulation/vectoring_thrust_grasp/patch/: osqp_eigen.patch
aerial_manipulation/vectoring_thrust_grasp/scripts/: joystick_operation.py  spawn_target_object.py
aerial_manipulation/vectoring_thrust_grasp/src/: grasping_motion.cpp  grasping_motion_node.cpp  vectoring_thrust_planner.cpp  vectoring_thrust_test.cpp  vectoring_thrust_test_node.cpp
aerial_motion/bspline_generator/: CMakeLists.txt  package.xml
aerial_motion/bspline_generator/launch/: aerial_trajectory_plannar.launch
aerial_motion/bspline_generator/scrpits/: return.py
aerial_motion/bspline_generator/src/: AerialControllerInterface.cpp  AerialPlannar.cpp  BsplineGenerator.cpp  TinysplineInterface.cpp  aerial_plannar.cpp  aerial_plannar_node.cpp  tinyspline_interface.cpp
aerial_motion/differential_kinematics/: .gitignore  CMakeLists.txt  README.md  differential_kinematics_constraint.xml  differential_kinematics_cost.xml  differential_kinematics_se3_constraint.xml  package.xml
aerial_motion/differential_kinematics/launch/: dragon_end_effector_ik.launch  dragon_gap_passing_planning_differential_kinematics.launch  hydrus_end_effector_ik.launch  hydrus_gap_passing_planning_differential_kinematics.launch
aerial_motion/differential_kinematics/msg/: TargetPose.msg
aerial_motion/differential_kinematics/scripts/: simple_collision.py
aerial_motion/differential_kinematics/srv/: TargetPose.srv
aerial_motion/differential_motion/: CMakeLists.txt  package.xml
aerial_motion/flap_manipulation/: CMakeLists.txt  README.md  package.xml
aerial_motion/flap_manipulation/config/: bottom.yaml  end_effector.yaml  flap.yaml  lateral.yaml
aerial_motion/flap_manipulation/launch/: dragon_bringup.launch  flap_manipulation.launch  ground_station.launch
aerial_motion/flap_manipulation/src/: flap_manipulation.cpp  flap_manipulation_node.cpp
aerial_motion/flap_manipulation/urdf/: flap.urdf
aerial_motion/gap_passing/: CMakeLists.txt  README.md  README.txt  package.xml
aerial_motion/gap_passing/config/: data_replay.rviz  planning.rviz
aerial_motion/gap_passing/launch/: motion_control_from_file.launch  motion_planning0.launch
aerial_motion/gap_passing/msg/: PlanningMode.msg  float64Array.msg
aerial_motion/gap_passing/path_log/: dragon_planning_log5_tilt_45deg_gap_0p6.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_param.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall2.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall3.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall_param.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall_param2.txt  dragon_planning_log_vertial_gap_0p5_ceil_1p4_with_side_wall_param3.txt  planning_log.txt  planning_log_hydra_hex_thre_0p17.txt  planning_log_only_path_0p045_new4_2-o2hatena.txt
aerial_motion/gap_passing/src/: motion_control.cpp  (+4 more)
aerial_motion/hydra_gap_passing/: CMakeLists.txt  manifest.xml  package.xml
aerial_motion/hydrus_gap_passing/: CMakeLists.txt  mainpage.dox  package.xml  package.xml~
aerial_motion/hydrus_object_transportation/: CMakeLists.txt  package.xml
aerial_motion/sampling_based_method/: CMakeLists.txt  README.md  package.xml
aerial_motion/squeeze_navigation/: CMakeLists.txt  README.md  package.xml  planner_plugins.xml
aerial_recognition/: CMakeLists.txt  package.xml
aerial_recognition/config/: circle_detection.yaml
aerial_recognition/launch/: circle_detection.launch  tiny_laser1.launch  tiny_laser2.launch
aerial_recognition/scripts/: laser_inertial_parameters.py
aerial_recognition/src/: ransac_sample.cpp
motion_planning/: CMakeLists.txt  package.xml
navigation/path2d/: CMakeLists.txt
navigation/wave_propagation/: CMakeLists.txt
(+370 files in other folders)
