<?xml version="1.0"?>
<package>
  <name>aerial_recognition</name>
  <version>1.0.0</version>
  <description>The aerial_recognition package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>mrpt_navigation</build_depend>
  <build_depend>tf</build_depend>
  <build_depend>message_filters</build_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>visualization_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>mrpt_navigation</run_depend>
  <run_depend>message_filters</run_depend>

  <export>
  </export>
</package>
