<?xml version="1.0"?>
<package format="3">
  <name>motion_planning</name>
  <version>1.3.2</version>
  <description>Software of JSK lab for motion planning for aerial robot </description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">Moju Zhao</maintainer>

  <license>BSD</license>

  <url type="website">http://www.jsk.t.u-tokyo.ac.jp/</url>

  <buildtool_depend>catkin</buildtool_depend>

  <exec_depend>differential_kinematics</exec_depend>
  <exec_depend>flap_manipulation</exec_depend>
  <exec_depend>path_navigation</exec_depend>
  <exec_depend>sampling_based_method</exec_depend>
  <exec_depend>squeeze_navigation</exec_depend>
  <exec_depend>aerial_transportation</exec_depend>
  <exec_depend condition="$ROS_PYTHON_VERSION == 3">python-is-python3</exec_depend>

  <export>
    <metapackage/>
  </export>
</package>
