<?xml version="1.0"?>
<package>
  <name>aerial_transportation</name>
  <version>1.0.0</version>
  <description>The aerial_transportation package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>aerial_robot_base</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>nav_msgs</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>rospy</build_depend>
  <build_depend>std_msgs</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>dynamixel_msgs</build_depend>
  <build_depend>tf</build_depend>
  <run_depend>aerial_robot_base</run_depend>
  <run_depend>dynamic_reconfigure</run_depend>
  <run_depend>geometry_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>nav_msgs</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>rospy</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>dynamixel_msgs</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <aerial_transportation plugin="${prefix}/aerial_transportation_plugins.xml" />
    <aerial_transportation plugin="${prefix}/grasp_planning_plugins.xml" />
  </export>
</package>
