<?xml version="1.0"?>
<package format="2">
  <name>vectoring_thrust_grasp</name>
  <version>0.0.0</version>
  <description>The vectoring_thrust_grasp package</description>

  <!-- One maintainer tag required, multiple allowed, one person per tag -->
  <!-- Example:  -->
  <!-- <maintainer email="jane.doe@example.com">Jane Doe</maintainer> -->
  <maintainer email="chou@todo.todo">chou</maintainer>


  <!-- One license tag required, multiple allowed, one license per tag -->
  <!-- Commonly used license strings: -->
  <!--   BSD, MIT, Boost Software License, GPLv2, GPLv3, LGPLv2.1, LGPLv3 -->
  <license>TODO</license>


  <buildtool_depend>catkin</buildtool_depend>
  <depend>dragon</depend>
  <depend>osqp</depend>
  <depend>osqp-eigen</depend>
  <depend>roscpp</depend>

</package>
