<?xml version="1.0"?>
<package >
  <name>differential_kinematics</name>
  <version>1.0.0</version>
  <description>The differential_kinematics package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>bspline_ros</build_depend>
  <build_depend>aerial_robot_model</build_depend>
  <build_depend>hydrus</build_depend>
  <build_depend>dragon</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>aerial_motion_planning_msgs</build_depend>
  <build_depend>fcl_catkin</build_depend>
  <build_depend>tf_conversions</build_depend>
  <build_depend>kdl_conversions</build_depend>

  <run_depend>roscpp</run_depend>
  <run_depend>bspline_ros</run_depend>
  <run_depend>aerial_robot_model</run_depend>
  <run_depend>hydrus</run_depend>
  <run_depend>dragon</run_depend>
  <run_depend>pluginlib</run_depend>
  <run_depend>fcl_catkin</run_depend>
  <run_depend>tf_conversions</run_depend>
  <run_depend>kdl_conversions</run_depend>

  <export>
    <differential_kinematics plugin="${prefix}/differential_kinematics_cost.xml" />
    <differential_kinematics plugin="${prefix}/differential_kinematics_constraint.xml" />
    <differential_kinematics plugin="${prefix}/differential_kinematics_se3_constraint.xml" />
  </export>

</package>
