<?xml version="1.0"?>
<package format="2">
  <name>differential_motion</name>
  <version>1.0.0</version>
  <description>The differential_motion package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>roscpp</build_depend>
  <build_depend>hydrus</build_depend>
  <build_depend>dragon</build_depend>
  <build_depend>pluginlib</build_depend>
  <build_depend>libccd-dev</build_depend>

  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>hydrus</build_export_depend>
  <build_export_depend>dragon</build_export_depend>
  <build_export_depend>pluginlib</build_export_depend>
  <build_export_depend>libccd-dev</build_export_depend>

  <exec_depend>roscpp</exec_depend>
  <exec_depend>hydrus</exec_depend>
  <exec_depend>dragon</exec_depend>
  <exec_depend>pluginlib</exec_depend>
  <exec_depend>libccd-dev</exec_depend>

  <export>
    <differential_motion plugin="${prefix}/differential_kinematics_cost.xml" />
    <differential_motion plugin="${prefix}/differential_kinematics_constraint.xml" />
  </export>

</package>
