<?xml version="1.0"?>
<package format="2">
  <name>flap_manipulation</name>
  <version>1.0.0</version>
  <description>The flap_manipulation package</description>

  <maintainer email="chou@jsk.imi.i.u-tokyo.ac.jp">chou</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>squeeze_navigation</depend>

</package>
